test/visibility/private/iters/useOtherSibling.good
useOtherSibling.chpl:13: In function 'main':
useOtherSibling.chpl:14: error: unresolved call 'foo(6)'
useOtherSibling.chpl:14: note: because no functions named foo found in scope
